@@ -180,7 +180,7 @@ module Graphics.Rendering.Cairo (
 
   -- * Types
 
-  , Render(runRender)
+  , Render
   , Matrix
   , Surface
   , Pattern
@@ -214,6 +214,7 @@ import Control.Monad.Reader (ReaderT(..), runReaderT, ask, MonadIO, liftIO)
 import Control.Exception (bracket)
 import Graphics.Rendering.Cairo.Types
 import qualified Graphics.Rendering.Cairo.Internal as Internal
+import Graphics.Rendering.Cairo.Internal (Render(..))
 
 liftRender0 :: (Cairo -> IO a) -> Render a
 liftRender0 f = ask >>= \context -> liftIO (f context)
